@@ -17,6 +17,66 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -85,22 +145,6 @@ name|cayenne
 operator|.
 name|exp
 operator|.
-name|property
-operator|.
-name|BaseProperty
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|exp
-operator|.
 name|Expression
 import|;
 end_import
@@ -116,6 +160,22 @@ operator|.
 name|exp
 operator|.
 name|ExpressionFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|exp
+operator|.
+name|property
+operator|.
+name|BaseProperty
 import|;
 end_import
 
@@ -161,71 +221,13 @@ name|ObjEntity
 import|;
 end_import
 
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
-import|;
-end_import
-
 begin_comment
-comment|/**  * A query that selects persistent objects of a certain type or "raw data" (aka  * DataRows). Supports expression qualifier, multiple orderings and a number of  * other parameters that serve as runtime hints to Cayenne on how to optimize  * the fetch and result processing.  */
+comment|/**  * A query that selects persistent objects of a certain type or "raw data" (aka  * DataRows). Supports expression qualifier, multiple orderings and a number of  * other parameters that serve as runtime hints to Cayenne on how to optimize  * the fetch and result processing.  * @deprecated since 4.2  * use {@link org.apache.cayenne.query.ObjectSelect}  */
 end_comment
 
 begin_class
+annotation|@
+name|Deprecated
 specifier|public
 class|class
 name|SelectQuery
